# LDAP-ETL

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LDAPDatabaseCreationScript.sql  README.md  ldap.py  package-lock.json  package.json  pyproject.toml  pyproject.toml.bak  renovate.json  sonar-project.properties  tests.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codespell.yaml  lint.yaml  release.yaml  sonar.yaml  test.yaml  update.yaml
