[tool.poetry]
name = "atlas-etl-ldap"
version = "1.0.0"
description = "Atlas BI Library LDAP ETL"
authors = ["Christopher Pickering <cpickering@rhc.net>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7.2"
pyodbc = "^4.0.34"
ldap3 = "^2.9.1"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
mypy = "^0.981"
pylint = "^2.14.5"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
flake8-typing-imports = "^1.13.0"
flake8-builtins = "^1.5.3"
pep8-naming = "^0.13.1"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-print = "^5.0.0"
flake8-simplify = "^0.19.3"
flake8-variables-names = "^0.0.5"
tox = "^3.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
